# main.go
@@ -84,7 +84,7 @@ func main() {
         private.GET("/posts/snapshares/:pid", posts.IsSnapshared)
         private.DELETE("/posts/snapshares/:pid", posts.DeleteSnapshare)
         private.POST("/posts/snapshares/:pid", posts.CreateSnapshare)
-        private.GET("/posts/stats/me", posts.GetMyStats)
+        private.GET("/posts/me/stats", posts.GetMyStats)
 
         /* messaging routes */
         private.POST("/messages/token", messages.RegisterToken)
